# godot_wry

./: .env.example  .gitattributes  .gitignore  LICENSE  README.md  ROADMAP.md  build.sh  justfile
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build.yml
assets/: Info.plist
docs/: index.md  package-lock.json  package.json
docs/.vitepress/: config.mts
docs/.vitepress/theme/: index.ts  styles.css
docs/.vitepress/theme/components/: RoadmapCard.vue  RoadmapSection.vue
docs/about/: alternatives.md  caveats.md  roadmap.md
docs/contributing/: compiling.md  docs.md  how-to-contribute.md
docs/examples/: character-creation-ui.md
docs/guide/: getting-started.md  what-is-godot-wry.md
docs/reference/: javascript.md  webview.md
docs/tutorials/: exporting.md  gdscript-js-interop.md
godot/: WRY.gdextension  icon.svg.import  node_3d.tscn  project.godot  test.gd  webview_test.gd
godot/addons/godot_wry/: WRY.gdextension  index.html
godot/addons/godot_wry/examples/: basic_usage.tscn  example.tscn  linux_test.tscn  tps.gd  tps.tscn
godot/addons/godot_wry/examples/character_creator_ui_demo/: character_creator.gd  character_creator.tscn
godot/addons/godot_wry/examples/character_creator_ui_demo/assets/: player_placeholder.glb  player_placeholder.glb.import  player_placeholder_0.jpg.import
godot/addons/godot_wry/examples/tps/: CharacterBody3D.gd  tps.tscn
godot/icons/: webview.svg.import
rust/: Cargo.toml
rust/src/: godot_window.rs  lib.rs  protocols.rs
scripts/: ci_sign_macos.ps1
(+8 files in other folders)
