[package]
name = "godot_wry"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]  # Compile this crate to a dynamic C library.

[dependencies]
godot = { git = "https://github.com/godot-rust/gdext", branch = "master" }
objc2-foundation = { version = "0.2.2", features = ["NSThread"] }
raw-window-handle = "0.6.2"
wry = "0.46.2"
lazy_static = "1.5.0"