[package]
name = "godot_wry"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]  # Compile this crate to a dynamic C library.

[dependencies]
godot = { git = "https://github.com/godot-rust/gdext", branch = "master" }
raw-window-handle = "0.6.2"
wry = { version = "0.46.2", features = ["transparent", "devtools"] }
