[package]
name = "godot_wry"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]  # Compile this crate to a dynamic C library.

[dependencies]
godot = { git = "https://github.com/godot-rust/gdext", branch = "master", features = ["api-4-1"] }
raw-window-handle = "0.6.2"
wry = { version = "0.50.4", features = ["transparent", "devtools"] }
http = "1.1.0"
lazy_static = "1.5.0"
serde_json = "1.0"
[target.'cfg(target_os = "linux")'.dependencies]
gtk = "0.18.1"
[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.61.1", features = ["Win32", "Win32_UI", "Win32_UI_WindowsAndMessaging"]}
